# t2v-eval

./: .gitignore  .gitmodules  AGENTS.md  CLAUDE.md  LICENSE  README.md  README_zh.md  deep-forcing.md  pyproject.toml  requirements.txt  tutorial.md  tutorial_zh.md
causal-forcing-30s/vbench_group_runs/: 01__causal-forcing-30s.csv
causal-forcing-30s/vbench_progress/: rank_0.json
causal-forcing-30s/vbench_results/: aesthetic_quality_eval_results.json  aesthetic_quality_full_info.json  appearance_style_eval_results.json  appearance_style_full_info.json  background_consistency_eval_results.json  background_consistency_full_info.json  dynamic_degree_eval_results.json  dynamic_degree_full_info.json  human_action_eval_results.json  human_action_full_info.json  imaging_quality_eval_results.json  imaging_quality_full_info.json  motion_smoothness_eval_results.json  motion_smoothness_full_info.json  overall_consistency_eval_results.json  overall_consistency_full_info.json  scene_eval_results.json  scene_full_info.json  subject_consistency_eval_results.json  subject_consistency_full_info.json  temporal_flickering_eval_results.json  temporal_flickering_full_info.json  temporal_style_eval_results.json  temporal_style_full_info.json
configs/: Check_VBench_Official_Sanity.yaml  Exp-C_OscHead_RadicalKV_vbench.yaml  Exp-K_StaOscCompression.yaml  Exp-T-b1.yaml  Exp-T-lite_12D.yaml  Exp-T-lite_BatchGrit15D.yaml  Exp-T_BatchGritFull16D.yaml  Exp-X.yaml  Exp-X_BatchGritTest.yaml  Exp-Y_BatchGritFull16D.yaml  Exp-rapid.yaml  Exp_.yaml.example  Exp_21frames_OscStable_Head_Win.yaml  Exp_72frames_OscStable_Head_Win.yaml  Exp_OscStable_Head_Window.yaml  Exp_OscStable_Head_Window_vbench16.yaml  Exp_Stable_Head_v1_21f.yaml  Exp_pyramid_forcing_groups-H200.yaml  Exp_pyramid_forcing_groups.yaml  ablation-method3.yaml  addition-30s.yaml  addition-60s.yaml  causal-forcing-30s.yaml  causal-forcing-60s.yaml  causal-forcing-rerun-30s.yaml  causal-forcing-rerun-60s.yaml  causal-forcing-rerun.yaml  classify-ablation-thpx80.yaml  classify-ablation.yaml  classify-period-ablation.yaml  eval.yaml  four-forcing-H200.yaml  framework-ablation.yaml  fullkv-30s.yaml  prompts128-30s-v2.yaml  prompts128-30s.yaml  prompts128-60s-v2.yaml  prompts128-60s.yaml  pyramid-forcing-compression.yaml  pyramid-forcing-fftv3-prompts128-30s.yaml  (+5 more)
docs/: USAGE.md  tutorial.md  tutorial_zh.md  vbench_slow_dimensions_audit.md  vbench_slow_dimensions_equivalence_checklist.md
frontend/: AGENTS.md  README.md  index.html  package.json  pnpm-lock.yaml  tailwind.config.js
frontend/public/data/: group_summary.csv  group_summary_vbench_prompts128-30s-v2.csv  group_summary_vbench_prompts128-60s-v2.csv  manifest.json  per_video_metrics.csv  prompts128-30s-debug1.csv  prompts128-30s-debug1_removed.csv  prompts128-60s-debug1.csv  prompts128-60s-debug1_removed.csv  vbench_Exp-K_StaOscCompression.csv  vbench_Exp-T-b1.csv  vbench_Exp-T-lite_12D.csv  vbench_Exp-T-lite_BatchGrit15D.csv  vbench_Exp-T_BatchGritFull16D.csv  vbench_Exp-X.csv  vbench_Exp-rapid.csv  vbench_Exp_pyramid_forcing_groups.csv  vbench_ablation-method3.csv  vbench_addition-30s.csv  vbench_addition-60s.csv  vbench_causal-forcing-60s.csv  vbench_causal-forcing-rerun-30s.csv  vbench_causal-forcing-rerun-60s.csv  vbench_causal-forcing-rerun.csv  vbench_classify-ablation-thpx80.csv  vbench_classify-ablation.csv  vbench_classify-period-ablation.csv  vbench_four-forcing-H200.csv  vbench_framework-ablation.csv  vbench_fullkv-30s.csv  vbench_per_video.csv  vbench_prompts128-30s-debug1.csv  vbench_prompts128-30s-v2.csv  vbench_prompts128-30s.csv  vbench_prompts128-30s_no_pyramid.csv  vbench_prompts128-60s-debug1.csv  vbench_prompts128-60s-v2.csv  vbench_prompts128-60s.csv  vbench_pyramid-forcing-compression.csv  vbench_pyramid-forcing-fftv3-prompts128-30s.csv  (+5 more)
frontend/src/: App.vue
frontend/src/assets/: main.css
frontend/src/components/: CodeBlock.vue  FileUpload.vue  (+4 more)
hf/VBench_sampled_video/: lavie.zipk_gqcjms.part
local/pyramid-forcing-thp35-30s/: config.yaml
outputs/Exp-K_StaOscCompression/: alignment_report.md  deep_forcing_overall_gap_root_cause.md  group_summary_deep_forcing_8d.csv  per_video_metrics.csv  vbench_Exp-K_StaOscCompression.csv  vbench_per_video.csv
scripts/: Check_build_vbench_prompts_csv.py  Check_download_vbench_sampled.py  Check_download_vbench_sampled_gdrive.py  Check_unpack_vbench_sampled.py  analyze_overall_gap.py  analyze_scene_human_action.py  diagnose_vbench_alignment.py  download_hf_subdir.py  export_from_hf.py  merge_vbench_all.sh  merge_vbench_group_runs.py  merge_vbench_group_runs.sh  prefetch_vbench_assets.sh  preprocess_videos.py  profile_vbench_slow_dims_one_video.py  recompute_vbench_model_scores.py  run_all.py  run_clip_or_vqa.py  run_eval_core.py  run_eval_pipeline.py  run_flicker.py  run_niqe.py  run_vbench.py  summarize.py  summarize_vbench_groups.sh
scripts/vbench_runner/: README.md  __init__.py  assets.py  auxiliary.py  compat.py  core.py  distributed.py  env.py  group_labels.py  group_runs.py  group_subset.py  preprocess_long.py  progress.py  results.py  scaling.py  slow_dims.py  video_records.py
skills/t2v-vbench-long-lite-yaml/: SKILL.md
skills/t2v-yaml-from-tree/: SKILL.md
tests/: conftest.py  test_analyze_overall_gap.py  test_analyze_scene_human_action.py  test_clip_or_vqa.py  test_diagnose_vbench_alignment.py  test_eval_core.py  test_export_from_hf.py  test_flicker.py  test_group_labels.py  test_niqe.py  test_preprocess.py  test_recompute_vbench_model_scores.py  test_summarize.py  test_vbench_assets.py  test_vbench_auxiliary.py  test_vbench_compat_batch.py  test_vbench_coverage_policy.py  test_vbench_device_binding.py  test_vbench_dimensions_contract.py  test_vbench_distributed.py  test_vbench_env.py  test_vbench_grit_batch_parity_integration.py  test_vbench_grit_roiheads_batch.py  test_vbench_group_runs.py  test_vbench_group_subset.py  test_vbench_long_pipeline_integration.py  test_vbench_registry.py  test_vbench_results.py  test_vbench_scaling.py  test_vbench_slow_dims_adaptive.py  test_vbench_video_records.py
(+401 files in other folders)
