[project]
name = "t2v-eval"
version = "0.1.0"
description = "Unified evaluation pipeline for text-to-video generation with official metric implementations"
readme = "README.md"
license = { text = "MIT" }
requires-python = ">=3.10,<3.11"
authors = [
    { name = "Your Name", email = "your.email@example.com" }
]
keywords = ["text-to-video", "evaluation", "vbench", "clip", "video-generation"]
classifiers = [
    "Development Status :: 3 - Alpha",
    "Intended Audience :: Science/Research",
    "License :: OSI Approved :: MIT License",
    "Programming Language :: Python :: 3",
    "Programming Language :: Python :: 3.10",
    "Programming Language :: Python :: 3.11",
    "Programming Language :: Python :: 3.12",
    "Topic :: Scientific/Engineering :: Artificial Intelligence",
]

dependencies = [
    # Core
    "numpy>=1.21.0",
    "pandas>=1.3.0",
    "pyyaml>=6.0",
    "tqdm>=4.62.0",
    "pillow>=8.0.0",
    # HuggingFace
    "datasets>=2.14.0",
    "huggingface-hub>=0.16.0",
    # Video processing
    "decord>=0.6.0",
    "opencv-python>=4.5.0",
    # PyTorch (user should install separately for CUDA support)
    "torch>=2.0.0",
    "torchvision>=0.15.0",
    # CLIP/VQA
    "open-clip-torch>=2.20.0",
    "transformers>=4.30.0",
    # Image quality
    "pyiqa>=0.1.7",
    "t2v-metrics",
]

[project.optional-dependencies]
dev = [
    "black>=22.0.0",
    "ruff>=0.1.0",
    "pytest>=7.0.0",
    "pytest-cov>=4.0.0",
]

vbench = [
    # VBench dependencies (install after submodule init)
    "einops>=0.6.0",
    "ftfy>=6.0.0",
    "easydict>=1.9",
    "pytorch-lightning>=2.0.0",
]

all = [
    "t2v-eval[dev,vbench]",
]

[project.urls]
Homepage = "https://github.com/YOUR_USERNAME/t2v-eval"
Repository = "https://github.com/YOUR_USERNAME/t2v-eval"
Documentation = "https://github.com/YOUR_USERNAME/t2v-eval#readme"

[project.scripts]
t2v-eval = "scripts.run_all:main"

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.hatch.build.targets.wheel]
packages = ["scripts"]

[tool.uv]
dev-dependencies = [
    "black>=22.0.0",
    "ruff>=0.1.0",
    "pytest>=7.0.0",
]

[tool.uv.workspace]
members = [
    "third_party/t2v_metrics",
]

[tool.uv.sources]
t2v-metrics = { workspace = true, editable = true }

[tool.ruff]
line-length = 100
target-version = "py310"

[tool.ruff.lint]
select = ["E", "F", "W", "I", "N", "UP", "B", "C4"]
ignore = ["E501"]

[tool.black]
line-length = 100
target-version = ["py310", "py311", "py312"]

[tool.pytest.ini_options]
testpaths = ["tests"]
python_files = ["test_*.py"]
addopts = "-v --tb=short"
